--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "engines": {
     "node": "5.3.0"
   },
-  "name": "node-authentication",
+  "name": "local Game",
   "main": "server.js",
   "dependencies" : {
     "express" : "~4.0.0",
